Thu Apr  9 11:11:10 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/nkf/nkf.c: RDoc typo fixed.  [ruby-core:23170]

Wed Apr  8 13:57:56 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (Logging.postpone): copy postponed output always.

Mon Apr  6 23:16:08 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (CFLAGS, CXXFLAGS): override with $cflags and
	  $cxxflags if not given.  [ruby-core:23130]

Fri Apr  3 18:37:59 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (Init_stack): use ruby_init_stack.  [ruby-dev:34350]

	* intern.h (Init_stack): make to call ruby_init_stack.

Fri Apr  3 18:35:03 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in (fake.rb): creates with config.status.

	* template/fake.rb.in: extracted from Makefile.in.

	* configure.in (fake.rb): prefixed with $(arch)-.

Fri Apr  3 13:53:44 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (is_defined): made a volatile variable not to be
	  clobbered by longjmp.

Fri Apr  3 12:46:19 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb: quotes arguments with spaces always.

Fri Apr  3 12:43:14 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (main): passes $(MAKE) to mkmain_cmd

	* ext/extmk.rb (command_output): uses arguments to invoke make.

Mon Mar 30 12:12:07 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_eval): checks for interrupt, stack and finalizers too.
	  [ruby-dev:38208], [Bug #1329]

	* eval.c (eval): replaces the message if frozen.

Sat Mar 28 04:31:36 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/dl/{mkcall,mkcallback,mkcbtable}.rb: no needs of mkmf.

Sat Mar 28 04:00:00 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb: MINIRUBY is given via make-flag.

Wed Mar 25 00:20:38 2009  Akinori MUSHA  <knu@iDaemons.org>

	* lib/cgi.rb: $KCODE always holds its value in upper case.

	* lib/jcode.rb: Ditto.

Mon Mar 23 21:54:20 2009  Akinori MUSHA  <knu@iDaemons.org>
